# human-voice

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: false-positive.md  missed-tell.md
.github/workflows/: test.yml
eval/: EVAL.md  ablation.py  ablation_results.json  detector_harness.py  lib.py  results.json  run_eval.py
eval/corpus/: LABELS.json
eval/corpus/ai/: a01_marketing_landing.md  a02_technical_overview.md  a03_blog_productivity.md  a04_email_outreach.md  a05_academic_essay.md  a06_casual_listicle.md  a07_business_report.md  a08_technical_tutorial.md  a09_marketing_email.md  a10_academic_intro.md  a11_business_proposal.md  a12_blog_finance.md  a13_blog_systems.md  a14_business_strategy.md  a15_creative_fiction.md  a16_creative_essay.md  a17_email_outreach.md  a18_technical_overview.md  a19_technical_overview.md  a20_business_strategy.md  a21_academic_intro.md  a22_marketing_launch.md  a23_creative_fiction.md  a24_creative_essay.md
eval/corpus/esl_formal/: e01_technical_postgres.md  e02_business_supplier.md  e03_academic_bilingual.md  e04_email_deadline.md  e05_casual_marathon.md  e06_marketing_coffee.md  e07_technical_rust.md  e08_academic_groundwater.md  e09_business_remote.md  e10_email_intro.md
eval/corpus/human/: h01_technical_postmortem.md  h02_marketing_landing.md  h03_casual_blog.md  h04_academic_abstract.md  h05_email_update.md  h06_technical_readme.md  h07_casual_review.md  h08_academic_argument.md  h09_email_pitch.md  h10_technical_decision.md  (+14 more)
eval/tests/: test_calibration.py  test_lib.py
skills/human-voice/: SKILL.md  STYLE-GUIDE.md
tests/: stress_test.py  test_stress_wrapper.py
(+51 files in other folders)
